--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>5.0.4.RELEASE</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.mira</groupId>
       <artifactId>utils</artifactId>
       <version>1.9.0</version>
